# homehome

./: .env.sample  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  index.js  main.py  media-source.js  package-lock.json  package.json  player.js  requirements.txt  stt.js  tts.js
.dvc/: config
voice-actionizer/: .gitignore  Modelfile  Taskfile.yaml  config.ini  main.py  pyproject.toml  requirements.txt
voice-actionizer/actions/driven_port/: server.py
voice-actionizer/actions/driving_port/: book_reader.py  music_player.py
voice-actionizer/actions/model/: album.py  book.py
voice-actionizer/actions/tests/: test_book_reader.py  test_music_player.py
voice-actionizer/chatbot/: domain.yml  endpoints.yml
voice-actionizer/chatbot/data/: nlu.yml  rules.yml  stories.yml
voice-actionizer/di/: containers.py
voice-actionizer/domain/: instructor.py
voice-actionizer/domain/driven_port/: actionizer.py  metadata_retriever.py
voice-actionizer/domain/driving_port/: db.py  entrypoint.py  graph.py  instructor.py
voice-actionizer/domain/model/: intention.py  metadata.py
voice-actionizer/domain/tests/: test_instructor.py
voice-actionizer/driven/action_server/: main.py
voice-actionizer/driven/inmemory/: actionizer.py  answerer.py  metadata_retriever.py
voice-actionizer/driven/tts/: main.py  tts.ipynb
voice-actionizer/driving/cli/: main.py
voice-actionizer/driving/stt/: main.py  model.dvc
voice-actionizer/ext/: containers.py
voice-actionizer/ner/driven_port/: actionizer.py  answerer.py  metadata_retriever.py  music_player.py  store.py
voice-actionizer/ner/driving_port/: command.py  instructor.py
voice-actionizer/ner/model/: intention.py
voice-actionizer/stt/: model.dvc
voice-actionizer/tts/: main.py
(+97 files in other folders)
